--- a/server/client/src/components/userSelection/UserSelection.scss
+++ b/server/client/src/components/userSelection/UserSelection.scss
@@ -1,5 +1,5 @@
 .user-selection-page {
-    height: 100%;
+    // height: 100%;
     width: 95%;
     margin: 0 auto;
 
@@ -10,8 +10,23 @@
 
     .title {
         text-align: center;
-        padding: 2rem 0 0 0;
+        padding: 3rem 0 1rem 0;
         font-family: Arial;
+
+        font-size: 25px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #49c5b6;
+        text-decoration: none;
+        transition: color 0.3s ease-in-out;
+
+        .title-info {
+            border: solid;
+            padding: 1%;
+            margin: 0 auto;
+            display: inline;
+
+        }
     }
 }
 
