Mostly finished, now need to figure out the loading state

--- a/server/client/src/components/actorInfo/ActorInfoPage.css
+++ b/server/client/src/components/actorInfo/ActorInfoPage.css
@@ -1,3 +1,15 @@
+.error_msg_block {
+  text-align: center;
+  padding-top: 15%; }
+  .error_msg_block .error_msg_wrapper {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 50%;
+    margin: 0 auto; }
+    .error_msg_block .error_msg_wrapper .ui.negative.message {
+      text-align: center; }
+
 .action_info-container {
   background-color: #94716b; }
   .action_info-container .ui.container {
@@ -68,9 +80,9 @@
           max-width: 50%; }
           .action_info-container .ui.container .table-wrapper .block .inner-block-left span.block-info {
             display: flex;
-            padding: 1rem 3rem; }
+            padding: 1rem 1rem; }
             .action_info-container .ui.container .table-wrapper .block .inner-block-left span.block-info .label {
-              width: 10rem;
+              width: 50%;
               display: block;
               float: left; }
             .action_info-container .ui.container .table-wrapper .block .inner-block-left span.block-info span.block-data {
@@ -88,7 +100,7 @@
             display: flex;
             padding: 1rem 1rem; }
             .action_info-container .ui.container .table-wrapper .block .inner-block-right span.block-info .label {
-              width: 10rem;
+              width: 50%;
               display: block;
               float: left; }
             .action_info-container .ui.container .table-wrapper .block .inner-block-right span.block-info span.block-data {
@@ -102,15 +114,31 @@
       padding-bottom: 10px; }
 
 @media (max-width: 400px) {
+  .error_msg_block .error_msg_wrapper {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%; }
+    .error_msg_block .error_msg_wrapper .ui.negative.message {
+      text-align: center; }
   .action_info-container .ui.container .table-wrapper {
     width: 95%;
     margin: 0 auto;
     background-color: bisque; }
-    .action_info-container .ui.container .table-wrapper .block_info {
+    .action_info-container .ui.container .table-wrapper .block {
       flex-direction: column; }
-      .action_info-container .ui.container .table-wrapper .block_info .inner-block-left {
+      .action_info-container .ui.container .table-wrapper .block .inner-block-left {
         width: 100%;
         max-width: 100%; }
-      .action_info-container .ui.container .table-wrapper .block_info .inner-block-right {
+        .action_info-container .ui.container .table-wrapper .block .inner-block-left span.block_info {
+          padding: unset; }
+          .action_info-container .ui.container .table-wrapper .block .inner-block-left span.block_info .label {
+            width: 100%; }
+      .action_info-container .ui.container .table-wrapper .block .inner-block-right {
         width: 100%;
-        max-width: 100%; } }
+        max-width: 100%; }
+        .action_info-container .ui.container .table-wrapper .block .inner-block-right span.block_info {
+          padding: unset; }
+          .action_info-container .ui.container .table-wrapper .block .inner-block-right span.block_info .label {
+            width: 100%;
+            max-width: 50%; } }
