--- a/server/client/src/components/dataInfo/starship/Starship.scss
+++ b/server/client/src/components/dataInfo/starship/Starship.scss
@@ -4,6 +4,7 @@
     .starship-page-container {
         background-color: #85144B;
 
+
         .info-container {
             width: 80%;
             text-align: center;
@@ -39,6 +40,10 @@
 
             h1 {
                 color: #BaB2B5;
+            }
+
+            .btn-format {
+                padding: 2rem 0;
             }
         }
 
