--- a/server/client/src/components/dataInfo/vehicle/Vehicle.scss
+++ b/server/client/src/components/dataInfo/vehicle/Vehicle.scss
@@ -46,3 +46,20 @@
 
     }
 }
+
+@media(max-width: 400px) {
+    .vehical-page {
+
+        .vehical-page-container {
+    
+            .info-container {
+
+                .time-info {
+                    width: 100%;
+                }
+            }
+
+        }
+
+    }
+}
