--- a/server/client/src/components/actorInfo/vehicles/Vehicles.css
+++ b/server/client/src/components/actorInfo/vehicles/Vehicles.css
@@ -1,2 +1,28 @@
-p {
+.vehical-page .vehical-page-container .info-container .ui.container h1 {
+  text-decoration: underline;
+  text-underline-position: under; }
+
+.vehical-page .vehical-page-container .info-container .vehicle-name {
+  text-decoration: underline;
+  text-underline-position: under;
+  padding-bottom: 5px;
+  color: #DA7B93;
+  text-align: center;
+  display: inline; }
+  .vehical-page .vehical-page-container .info-container .vehicle-name h1 {
+    padding: 3rem 0 1rem 0;
+    font-size: 32px;
+    font-family: 'Zilla Slab Highlight', sans-serif; }
+
+.vehical-page .vehical-page-container .info-container .basic-info {
+  text-align: left;
+  font-weight: 500;
+  line-height: 1.1;
+  font-size: 16px;
+  font-family: 'Zilla Slab Highlight', sans-serif; }
+
+.vehical-page .vehical-page-container .info-container p {
   text-align: center; }
+
+.vehical-page .vehical-page-container .info-container .btn-format {
+  padding: 5% 0; }
