--- a/server/client/src/components/userSelection/UserSelection.css
+++ b/server/client/src/components/userSelection/UserSelection.css
@@ -6,7 +6,7 @@
     text-align: center; }
   .user-selection-page .title {
     text-align: center;
-    padding: 3rem 0 1rem 0;
+    margin: 3rem 0 2rem 0;
     font-family: Arial;
     font-size: 25px;
     font-weight: 300;
