--- a/server/client/src/components/userSelection/UserSelection.scss
+++ b/server/client/src/components/userSelection/UserSelection.scss
@@ -10,7 +10,7 @@
 
     .title {
         text-align: center;
-        padding: 3rem 0 1rem 0;
+        margin: 3rem 0 2rem 0;
         font-family: Arial;
 
         font-size: 25px;
