--- a/server/client/src/components/dataInfo/homeworld/Homeworld.scss
+++ b/server/client/src/components/dataInfo/homeworld/Homeworld.scss
@@ -9,11 +9,11 @@
             text-align: center;
             margin: 0 auto;
 
-            .homeworl-name {
+            .homeworld-name {
                 color: #DA7B93;
                 text-align: center;
                 display: inline;
-
+                font-size: 80px;
 
                 h1 {
                     padding: 3rem 0 1rem 0;
@@ -48,5 +48,31 @@
             }
         }
     }
+}
 
+@media(max-width: 400px) {
+    .homeworld-page {
+
+        .speciy-page-container {
+    
+            .info-container {
+
+                .homeworld-name {
+
+                    h1 {
+                        font-size: 50px;
+                    }
+                }
+                .time-info {
+                    width: 100%;
+                }
+
+                .basic-info {
+                    font-size: 12px;
+                }
+            }
+
+        }
+
+    }
 }
