--- a/server/client/src/components/dataInfo/speciy/Speciy.css
+++ b/server/client/src/components/dataInfo/speciy/Speciy.css
@@ -32,3 +32,11 @@
         width: 60%;
         margin: 0 auto;
         color: #05386B; }
+
+@media (max-width: 400px) {
+  .speciy-page .speciy-page-container .info-container .speciy-name h1 {
+    font-size: 50px; }
+  .speciy-page .speciy-page-container .info-container .time-info {
+    width: 100%; }
+  .speciy-page .speciy-page-container .info-container .basic-info {
+    font-size: 12px; } }
